Fix alignments on 1440p

--- a/frontend/src/styles/Editor.css
+++ b/frontend/src/styles/Editor.css
@@ -1,12 +1,15 @@
 
 .TextBlocks {
+    float: left;
     margin-right: 10%;
+    position: fixed;
 }
 
 .Editor {
     align-items: center;
-    position: relative;
+    position: fixed;
     height: 100%;
+    width: 100%;
     overflow-y: scroll;
     padding-bottom: 1%;
 }
@@ -22,7 +25,7 @@
 
 .Toolbar > .btn {
     font-size: 20px;
-    margin-top: 7px;
-    margin-bottom: 1%;
-    margin-right: 1%;
+    margin-bottom: auto;
+    margin-top: auto;
+    margin-right: 1vh;
 }
