--- a/frontend/src/styles/UserBar.css
+++ b/frontend/src/styles/UserBar.css
@@ -1,18 +1,17 @@
 .UserBar {
-    margin-bottom: 1%;
-    margin-top: 1%;
+    margin-bottom: auto;
+    margin-top: auto;
     overflow-x: hidden;
     overflow-y: hidden;
     white-space: nowrap;
     float: right;
     width: 100%;
-    transition: 0.6s;
 }
 
 .UserIcon {
     overflow: visible;
     display: inline;
-    position: relative;
+    margin-bottom: auto;
 }
 
 .HoverName {
